---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: ???
  Changes:
    - Recipes are now unlocked more gradually
  Bug fixes:
    - Removed quality of default recipes that unlocked prematurely
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2023.11.09
  Changes:
    - Recipe unlocks are now organized into hidden technologies
    - Better quality probabilities description
    - Some extra non-SA bonuses
    - Support for non-quality item filters
    - Reduce more recipes
    - Reorganized the quality bonuses modding
  Bug fixes:
    - Support tiles that are minable but return nothing
    - Fix connections and fluids when upgrading/downgrading with quality
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2023.11.07
  Changes:
    - Quality bonuses for vehicle guns and inventory
    - Support for "smoke-with-trigger"
    - Simplify quality bonus application
    - Support tiles
    - Allow non-quality recipes in quality modules buildings and "dumping" quality items into fluid results
    - Added quality table in description
  Bug fixes:
    - Fixes for module definitions without slots
    - Fix for recipes with fluid main product
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2023.11.05
  Changes:
    - Recycling items with multiple outputs recycle to self
    - Repair and science packs now get +100% quality bonuses
    - Support for recipes with single products named differently than their main product
    - Better quality icons
    - Better tip images
  Bug fixes:
    - Modules can now be recycled
    - Fixed crash in upgrade where player cursor becomes invalid
---------------------------------------------------------------------------------------------------
Version: 0.1.1