@@ -1,10 +1,12 @@
 [mod-setting-name]
 jq-use-extra-bonuses=Enable additional unofficial quality bonuses
 jq-show-player-programming-recipes=Show player programming recipes
+jq-quality-bonuses-import=Add extra quality bonuses by string
 
 [mod-setting-description]
 jq-use-extra-bonuses=Enables several balanced quality bonuses that were not indicated in the quality FFF
 jq-show-player-programming-recipes=Enables machine programming with quality modules to the player (deprecated)
+jq-quality-bonuses-import=[color=yellow]Advanced feature.[/color] A simple way to add more quality bonuses. Refer to source repository for details.
 
 [jq]
 quality-1=Normal
