@@ -1,4 +1,4 @@
-data:extend({
+data:extend {
     {
         type = "bool-setting",
         name = "jq-use-extra-bonuses",
@@ -11,5 +11,12 @@ data:extend({
         setting_type = "startup",
         default_value = false,
     },
+    {
+        type = "string-setting",
+        name = "jq-quality-bonuses-import",
+        setting_type = "startup",
+        default_value = "",
+        allow_blank = true,
+    },
 }
-)
+
